--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-streamlit-pandas-profiling
-pandas
-st-gsheets-connection
-ydata_profiling
+streamlit==1.36.0
+streamlit-pandas-profiling==0.1.3
+pandas==1.5.3
+st-gsheets-connection==0.0.4
+ydata_profiling==4.9.0
 numba==0.58.1
